@@ -1,1 +1,8 @@
 ### 2.4.1 堆溢出
+-Xms20m
+-Xmx20m
+-XX:+HeapDumpOnOutOfMemoryError
+-Xlog:gc*    //打印jvm内存日志
+### 2.4.2.1 栈溢出
+-Xss128k 栈溢出
+-Xlog:gc*    //打印jvm内存日志
